src/test/ui/underscore-lifetime/where-clause-trait-impl-underscore.rust2018.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/where-clause-trait-impl-underscore.rs:11:19
   |
LL |     T: WithRegion<'_>
   |                   ^^ expected named lifetime parameter
   |
help: consider introducing a named lifetime parameter
   |
LL ~ impl<'a, T> Foo for Vec<T>
LL | where
LL ~     T: WithRegion<'a>
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0106`.
